--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,7 +4,14 @@
     "paths": {
       "~/*": ["app/*"],
       "@/*": ["app/*"]
-    },
+    }
   },
-  "include": ["app/**/*"]
+  "include": [
+    "app/**/*.js",
+    "app/**/*.ts",
+    "app/**/*.json"
+  ],
+  "exclude": [
+    "app/components/Home.vue"
+  ]
 }
